Attempting to fix encoding issue.