@@ -6,6 +6,8 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
+import java.nio.charset.StandardCharsets;
+
 @SuppressWarnings("javadoc")
 public class HtmlCleanerStripTest {
 
@@ -362,8 +364,8 @@ public class HtmlCleanerStripTest {
 			Assertions.assertTrue(Files.isReadable(htmlPath));
 			Assertions.assertTrue(Files.isReadable(textPath));
 
-			String html = new String(Files.readAllBytes(htmlPath));
-			String expected = new String(Files.readAllBytes(textPath));
+			String html = Files.readString(htmlPath, StandardCharsets.UTF_8);
+			String expected = Files.readString(textPath StandardCharsets.UTF_8);
 			String actual = HtmlCleaner.stripHtml(html);
 
 			test(html.toString(), expected, actual);
